--- a/index.Rmd
+++ b/index.Rmd
@@ -8,6 +8,7 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 
 # source all R files
 source("Chart1.R")
+source("chart2.R")
 source("Chart3.R")
 source("summary.R")
 source("table.R")
